fix unevenness

--- a/style.css
+++ b/style.css
@@ -3,29 +3,23 @@
 }
 
 .firstSquare {
-    position: absolute;
-    top: 100px;
     background-color: rgb(241, 181, 132);
-    margin-left: 20px;
-    margin-top: 30px;
 }
 
 .secondSquare {
-    position:absolute;
+    position: absolute;
     top: 100px;
     left: 100px;
     background-color: rgba(201, 154, 153, 80%);
 }
 
 .thirdSquare {
-    margin-top: 30px;
-    transform: translate(420px, 0px);
     background-color: rgb(241, 181, 132);
 }
 
 .fourthSquare {
-    transform: translate(50%, 50%);
     background-color: rgba(201, 154, 153, 80%);
+    transform: translate(50%, -50%);
 }
 
 .square {
@@ -33,4 +27,24 @@
     border: 8px double rgb(0, 0, 0);
     height: 200px;
     width: 200px;
+}
+
+.tableContainer {
+    box-sizing: border-box;
+}
+
+.squaresContainer {
+    margin-top: 30px;
+    box-sizing: border-box;
+    display: flex;
+    gap: 200px;
+}
+
+.globalFirst {
+    margin-left: 20px;
+    position: relative;
+}
+
+.transmormer {
+    transform: translate(0px, -8px);
 }
